# RRec

./: .gitignore  CMakeLists.txt  CMakeListsPy.txt  README  install-opencv.sh
src/: LTEM.cpp  LTEM.hpp  cluster.cpp  cluster.hpp  clustering.cpp  clustering.hpp  dbscan.cpp  dbscan.hpp  detector.cpp  detector.hpp  detector.py  main.cpp  main.py  pipe.py  processing.cpp  processing.hpp  screencap.cpp  screencap.hpp  server.cpp  server.hpp  server.py
